--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -8,11 +8,12 @@
     <h1>Bemutatkozás</h1>
     <!--Személyes leírás rész -->
     <h2>Személyes adatok:</h2>
-    <p><span>Születési hely:</span> Oslo</p>
-    <p><span>Születési idő:</span> 1900.01.01</p>
+    <p><span>Születési hely:</span> Oslo <br>
+    <span>Születési idő:</span> 1900.01.01</p>
     <h2>Magamról</h2>
     <p>Szuák Ákosnak hívnak, másodéves gazdinfós hallgató vagyok a Corvinuson. Szombathelyről a Nagy Lajos Gimnáziumból érkeztem. </p>
     <a href="http://www.nagylajos-szhely.sulinet.hu/" target="_blank">Az előző iskolám weboldala</a>
+    <hr />
     <h2>Érdekességek</h2>
     <p>Kedvenc ételeim:</p>
     <div>
