--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <title></title>
 
+
+    <script src="hetedik.js"></script>
+
+
     <style>
         html, body {
-            height:100%
+            height: 100%
         }
 
         div {
@@ -37,13 +41,13 @@
         #vezérlő {
             display: flex;
             flex-direction: row;
-            justify-content:space-between;
+            justify-content: space-between;
             border: none;
         }
 
         #kép {
             flex-grow: 0;
-            flex-shrink: 0;            
+            flex-shrink: 0;
         }
 
         .gomb {
@@ -57,14 +61,17 @@
 
         .kerdes {
         }
-        .kattintható:hover{
+
+        .kattintható:hover {
             background-color: lightblue;
             color: white;
         }
-        .jo{
+
+        .jo {
             background-color: green;
         }
-        .rossz{
+
+        .rossz {
             background-color: red;
         }
     </style>
@@ -79,17 +86,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható" >Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattintható" onclick="Válasz(1)">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattintható" onclick="Válasz(2)">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható" onclick="Válasz(3)">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
+            <div onclick="Előre()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
