--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,8 +5,9 @@
     <title></title>
 
 
-    <script src="hetedik.js"></script>
+    <!--<script src="hetedik.js"></script>-->
     <!--<script src="tizedik.js"></script>-->
+    <script src="tizenegyedik.js"></script>
     
 
 
